style: fix fonts and adjust spacing

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,1000&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -91,9 +92,8 @@ body::-webkit-scrollbar-thumb {
   --showcase-h-color: #ffffff;
   --heading-color: #dcdcdcc8;
   --body-font-family: "sofiapro", sans-serif;
-  --heading-font-family: LabilGrotesk, -apple-system, BlinkMacSystemFont,
-    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
+  --heading-font-family: "Open Sans", sans-serif;
+  --nunito-font-family: "Nunito Sans", sans-serif;
   --fontSize1: 1rem;
   --fontSize2: 2rem;
   --fontSize3: 3rem;
